Bug 1428053: Use Maybe<uint32_t> instead of an integer and a bool. r=jessica

This is just cleanup and not needed, but I wrote it while debugging so I'd
rather land it :)

MozReview-Commit-ID: BdnheDnwHr4